Adds endpoint for check object status.
closes #2534
